Add POST /category/{id}